# xaptum-tpm

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  xaptum-tpm-config.cmake.in  xaptum-tpm.pc.in  xaptum_tpm.pc.in
.travis/: build-against-installed.sh  install-ibm-tpm2.sh  install-tpm2-tss.sh  run-cppcheck.sh  run-ibm-tpm2.sh
debian/: changelog  control  gbp.conf  libxaptum-tpm0.install  rules  xaptum-tpm.install
include/: xaptum-tpm.h
include/tss2/: tss2_common.h  tss2_sys.h  tss2_tcti.h  tss2_tcti_device.h  tss2_tcti_socket.h  tss2_tpm2_types.h  xaptum_nvram.h
include/xaptum-tpm/: keys.h  nvram.h
include/xaptum/tpm/: nvram.h
src/: keys.c  nvram.c  tss2_sys_clear.c  tss2_sys_commit.c  tss2_sys_context_allocation.c  tss2_sys_create.c  tss2_sys_createprimary.c  tss2_sys_evictcontrol.c  tss2_sys_hierarchychangeauth.c  tss2_sys_load.c  tss2_sys_nv.c  tss2_sys_sign.c  tss2_tcti_device.c  tss2_tcti_socket.c  xaptum_nvram.c
src/internal/: asn1.c  asn1.h  cmdauths.c  cmdauths.h  command_utils.c  command_utils.h  constants.c  execute.c  execute.h  keys-impl.c  keys-impl.h  marshal.c  marshal.h  pem.c  pem.h  sapi.c  sapi.h  sys_context_common.c  sys_context_common.h  tcti_common.h
src/xaptum/: nvram.c
test/: CMakeLists.txt  create_load_evict-test.c  keys-test.c  nvram-test.c  test-utils.h  tss2_sys_commit-test.c  tss2_sys_context-test.c  tss2_sys_createprimary-test.c  tss2_sys_hierarchychangeauth-test.c  tss2_sys_nv-test.c  tss2_sys_sign-secp256-test.c  tss2_sys_sign-test.c  tss2_tcti_device-test.c  tss2_tcti_socket-test.c
tss2/: CMakeLists.txt  tss2-config.cmake.in  tss2-sys.pc.in  tss2-tcti-device.pc.in  tss2-tcti-mssim.pc.in
tss2/include/tss2/: tss2_common.h  tss2_sys.h  tss2_tcti.h  tss2_tcti_device.h  tss2_tcti_mssim.h  tss2_tpm2_types.h
tss2/src/: tss2_sys_clear.c  tss2_sys_commit.c  tss2_sys_context_allocation.c  tss2_sys_create.c  tss2_sys_createprimary.c  tss2_sys_evictcontrol.c  tss2_sys_flushcontext.c  tss2_sys_hierarchychangeauth.c  tss2_sys_load.c  tss2_sys_nv.c  tss2_sys_readpublic.c  tss2_sys_sign.c  tss2_tcti_device.c  tss2_tcti_mssim.c
tss2/src/internal/: cmdauths.c  cmdauths.h  command_utils.c  command_utils.h  execute.c  execute.h  marshal.c  marshal.h  sys_context_common.c  sys_context_common.h  tcti_common.h
tss2/test/: CMakeLists.txt  full_key_creation.c  test-utils.h  tss2_sys_commit-test.c  tss2_sys_context-test.c  tss2_sys_createprimary-test.c  tss2_sys_flushcontext-test.c  tss2_sys_hierarchychangeauth-test.c  tss2_sys_nv-test.c  tss2_sys_readpublic-test.c  tss2_sys_sign-secp256-test.c  tss2_sys_sign-test.c  tss2_tcti_device-test.c  tss2_tcti_mssim-test.c
util/: CMakeLists.txt  xtpm_read_nvram.c
